--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,20 @@
 
     <packaging>pom</packaging>
 
-    <groupId>com.georgidinov</groupId>
-    <artifactId>pu-soft-tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <groupId>com.georgidinov</groupId>
+    <artifactId>pu-soft-tools</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>spring-app-module</module>
+    </modules>
 
     <properties>
         <java.version>11</java.version>
