Added module_a to parent project and as dependency to spring-app-module

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <modules>
         <module>spring-app-module</module>
+        <module>module_a</module>
     </modules>
 
     <properties>
