--- a/spring-app-module/pom.xml
+++ b/spring-app-module/pom.xml
@@ -11,7 +11,14 @@
 
     <artifactId>spring-app-module</artifactId>
 
+
     <dependencies>
+
+        <dependency>
+            <groupId>com.georgidinov</groupId>
+            <artifactId>module_a</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
