Added module_c and as dependency to module_b

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spring-app-module</module>
         <module>module_a</module>
         <module>module_b</module>
+        <module>module_c</module>
     </modules>
 
     <properties>
